# pythonisms

./: pyproject.toml
pythonisms/: pythonisms.py
tests/: test_pythonisms.py
