[tool.poetry]
name = "pythonisms"
version = "0.1.0"
description = ""
authors = ["mohammad silwadi <mohammadsilwadi1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
